Bug 168159 - CRASH: deleting columns and undoing
Summary: CRASH: deleting columns and undoing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Undo-Redo Crash
  Show dependency treegraph
 
Reported: 2025-08-28 15:29 UTC by Xisco Faulí
Modified: 2025-11-23 15:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-08-28 15:29:11 UTC
Steps to reproduce:
1. Open attachment 107696 [details] from bug 84874
2. In Sheet BERGHEAT delete column D
3. Delete Column D again
4. Undo
5. Undo

-> Crash

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 09a48f45d9a3e72ab761e6808701362c9c0b2e51
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-08-28 15:29:57 UTC
Regression introduced by:

commit 68db5b64b8db405f9e6c0368836a8ee671b46830	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Sat Jun 28 16:13:53 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Jun 29 12:57:29 2025 +0200
tree aa8a5d41ec091c3de4affcbe35f4db0b42af258a
parent 6337bb91cf2f99a94cf030758317e0714bf14222 [diff]

crashtesting ooo120243-1.ods

Bisected with: linux64-26.2
Comment 2 Commit Notification 2025-09-02 13:46:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4834c568532ef76e156d56365d704ac68413a0b0

tdf#168159 CRASH: deleting columns and undoing

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-09-03 19:40:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/641a0e3d9a668f38651831f2a99db02edd50f21e

tdf#168159 CRASH: deleting columns and undoing

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.