tdf#168159 CRASH: deleting columns and undoing

revert
   commit 68db5b64b8db405f9e6c0368836a8ee671b46830
   Author: Noel Grandin <noel.grandin@collabora.co.uk>
   Date:   Sat Jun 28 16:13:53 2025 +0200
   crashtesting ooo120243-1.ods
and
   commit c8742f36fa2bdc9d23042378f5b587ccda8b54dd
   Author: Noel Grandin <noel.grandin@collabora.co.uk>
   Date:   Thu May 22 10:18:48 2025 +0200
   tdf#166684 reduce cost of CellAttributeHelper::registerAndCheck

Change-Id: I4d4442c6927121e7f18e3e08eb1736fa94a896bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190521
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 4834c568532ef76e156d56365d704ac68413a0b0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192068
Reviewed-by: Bayram Çiçek <bayram.cicek@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>