sc/source/core/data/patattr.cxx
@@ -114,10 +114,12 @@ const ScPatternAttr* CellAttributeHelper::registerAndCheck(const ScPatternAttr& 
         return mpLastHit;
     }
     const OUString* pCandidateStyleName = rCandidate.GetStyleName();
-    auto [it, itEnd] = maRegisteredCellAttributes.equal_range(pCandidateStyleName);
-    for (; it != itEnd; ++it)
+    auto it = maRegisteredCellAttributes.lower_bound(pCandidateStyleName);
+    for (; it != maRegisteredCellAttributes.end(); ++it)
     {
         const ScPatternAttr* pCheck = *it;
+        if (CompareStringPtr(pCheck->GetStyleName(), pCandidateStyleName) != 0)
+            break;
         if (ScPatternAttr::areSame(pCheck, &rCandidate))
         {
             pCheck->mnRefCount++;
